commit latest gs changes